--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/status-bar": "3.12.1",
         "@ionic/storage": "2.0.1",
+        "@ngrx/core": "^1.2.0",
+        "@ngrx/effects": "2.0.4",
+        "@ngrx/store": "2.2.3",
         "cordova-android": "^6.2.3",
         "cordova-plugin-camera": "^2.4.1",
         "cordova-plugin-compat": "^1.1.0",
@@ -36,6 +39,8 @@
         "ionic-angular": "3.5.0",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
+        "redux": "^3.7.2",
+        "redux-offline": "^2.0.0",
         "rxjs": "5.4.0",
         "socket.io-client": "^2.0.3",
         "sw-toolbox": "3.6.0",
