--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
         "@ionic/storage": "2.0.1",
         "@ngrx/core": "^1.2.0",
         "@ngrx/effects": "2.0.4",
-        "@ngrx/store": "2.2.3",
+        "@ngrx/store": "^4.0.2",
+        "@ngrx/store-devtools": "3.2.4",
         "cordova-android": "^6.2.3",
         "cordova-plugin-camera": "^2.4.1",
         "cordova-plugin-compat": "^1.1.0",
