--- a/package.json
+++ b/package.json
@@ -22,25 +22,29 @@
         "@angular/platform-browser-dynamic": "4.1.3",
         "@ionic-native/camera": "^4.0.1",
         "@ionic-native/core": "3.12.1",
+        "@ionic-native/network": "^4.1.0",
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/status-bar": "3.12.1",
-        "@ionic/storage": "2.0.1",
+        "@ionic/storage": "^2.0.1",
         "@ngrx/core": "^1.2.0",
         "@ngrx/effects": "2.0.4",
-        "@ngrx/store": "^4.0.2",
+        "@ngrx/store": "2.2.3",
         "@ngrx/store-devtools": "3.2.4",
         "cordova-android": "^6.2.3",
         "cordova-plugin-camera": "^2.4.1",
         "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-console": "^1.0.5",
         "cordova-plugin-device": "^1.1.4",
+        "cordova-plugin-network-information": "^1.3.3",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
+        "cordova-sqlite-storage": "^2.0.4",
         "ionic-angular": "3.5.0",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
         "redux": "^3.7.2",
+        "redux-localstorage": "^0.4.1",
         "redux-offline": "^2.0.0",
         "rxjs": "5.4.0",
         "socket.io-client": "^2.0.3",
@@ -62,7 +66,9 @@
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
             "ionic-plugin-keyboard": {},
-            "cordova-plugin-camera": {}
+            "cordova-plugin-camera": {},
+            "cordova-plugin-network-information": {},
+            "cordova-sqlite-storage": {}
         },
         "platforms": [
             "android"
