--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@ngrx/effects": "2.0.4",
         "@ngrx/store": "2.2.3",
         "@ngrx/store-devtools": "3.2.4",
+        "angular2-jwt": "^0.2.3",
         "cordova-android": "^6.2.3",
         "cordova-plugin-camera": "^2.4.1",
         "cordova-plugin-compat": "^1.1.0",
