--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
         "ionic:build": "ionic-app-scripts build",
         "ionic:serve": "ionic-app-scripts serve"
     },
+    "config": {
+      "ionic_copy": "./config/copy.config.js"
+    },
     "dependencies": {
         "@angular/common": "4.1.3",
         "@angular/compiler": "4.1.3",
@@ -43,6 +46,7 @@
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
         "cordova-sqlite-storage": "^2.0.4",
+        "font-awesome": "^4.7.0",
         "ionic-angular": "3.5.0",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
