adding new version of ngrx

--- a/package.json
+++ b/package.json
@@ -31,10 +31,9 @@
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/status-bar": "3.12.1",
         "@ionic/storage": "^2.0.1",
-        "@ngrx/core": "^1.2.0",
-        "@ngrx/effects": "2.0.4",
-        "@ngrx/store": "2.2.3",
-        "@ngrx/store-devtools": "3.2.4",
+        "@ngrx/effects": "^4.0.5",
+        "@ngrx/store": "^4.0.3",
+        "@ngrx/store-devtools": "^4.0.0",
         "angular2-jwt": "^0.2.3",
         "cordova-android": "^6.2.3",
         "cordova-plugin-actionsheet": "^2.3.3",
