--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "socket.io-client": "^2.0.3",
     "sw-toolbox": "3.6.0",
     "uk.co.workingedge.phonegap.plugin.launchnavigator": "^4.0.4",
+    "uuid": "^3.1.0",
     "zone.js": "0.8.12"
   },
   "devDependencies": {
